--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,32 +15,34 @@ jobs:
         include:
           - os: ubuntu-latest
             compiler: "clang"
-            compiler-version: "10"
+            version: "10"
           - os: ubuntu-latest
-            compiler: "g++"
-            compiler-version: "9"
+            compiler: "gcc"
+            version: "9"
     steps:
     - uses: actions/checkout@v2
 
     - name: Install (Linux)
       if: runner.os == 'Linux'
+      shell: bash
       run: |
           # LLVM 9 is not in Bionic's repositories so we add the official LLVM repository.
-          if [ "${{ matrix.compiler }}" = "clang" ] && [ "${{ matrix.compiler-version }}" = "10" ]; then
+          if [ "${{ matrix.compiler }}" = "clang" ] && [ "${{ matrix.version }}" = "10" ]; then
             sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
           fi
           sudo apt-get update
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
-            sudo apt-get install -y g++-${{ matrix.compiler-version }}
-            echo "::set-env name=CC::gcc-${{ matrix.compiler-version }}"
-            echo "::set-env name=CXX::g++-${{ matrix.compiler-version }}"
+            sudo apt-get install -y g++-${{ matrix.version }}
+            echo "::set-env name=CC::gcc-${{ matrix.version }}"
+            echo "::set-env name=CXX::g++-${{ matrix.version }}"
           else
-            sudo apt-get install -y clang-${{ matrix.compiler-version }}
-            echo "::set-env name=CC::clang-${{ matrix.compiler-version }}"
-            echo "::set-env name=CXX::clang++-${{ matrix.compiler-version }}"
+            sudo apt-get install -y clang-${{ matrix.version }}
+            echo "::set-env name=CC::clang-${{ matrix.version }}"
+            echo "::set-env name=CXX::clang++-${{ matrix.version }}"
           fi
 
     - name: Create Build Environment
+      shell: bash
       run: cmake -E make_directory ${{runner.workspace}}/build
 
     - name: Configure
