--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,24 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        name: [linux-gcc-9, linux-clang-10]
+        name: [linux-gcc-9, linux-gcc-7, linux-clang-10, linux-clang-6]
         include:
           - name: linux-gcc-9
             os: ubuntu-latest
-            compiler: "clang"
-            version: "10"
-          - name: linux-clang-10
-            os: ubuntu-latest
             compiler: "gcc"
             version: "9"
+          - name: linux-gcc-7
+            os: ubuntu-latest
+            compiler: "gcc"
+            version: "7"
+          - name: linux-clang-10
+            os: ubuntu-latest
+            compiler: "clang"
+            version: "10"
+          - name: linux-clang-6
+            os: ubuntu-latest
+            compiler: "clang"
+            version: "6"
     steps:
     - uses: actions/checkout@v2
 
