--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,8 @@ jobs:
             sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
           fi
           if [ "${cc}" = "clang" ]; then
-            sudo apt-get install -y libstdc++-7-dev
+            sudo apt-get install -y libc++-7-dev libc++abi-7-dev
+            echo "::set-env name=CMAKE_CXX_FLAGS::-stdlib=libc++"
           fi
           sudo apt-get update
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
