--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        name: [linux-gcc-9, linux-gcc-7, linux-clang-10, linux-clang-7]
+        name: [linux-gcc-9, linux-gcc-7, linux-clang-10, linux-clang-6]
         include:
           - name: linux-gcc-9
             os: ubuntu-latest
@@ -24,10 +24,9 @@ jobs:
             os: ubuntu-latest
             compiler: "clang"
             version: "10"
-          - name: linux-clang-7
+          - name: linux-clang-6
             os: ubuntu-latest
-            compiler: "clang"
-            version: "7"
+            compiler: "clang" # default on bionic: clang-6
     steps:
     - uses: actions/checkout@v2
 
@@ -44,6 +43,9 @@ jobs:
 
           if [ "${cc}" = "clang-10" ]; then
             sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
+          fi
+          if [ "${cc}" = "clang" ]; then
+            sudo apt-get remove -y gcc-9 g++-9
           fi
           sudo apt-get update
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
