Revert clang-6 test to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,14 @@ matrix:
           sources: *all_sources
           packages: ['g++-8']
       env: MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && COVERAGE=Off && DOCKER=On"
+    - os: linux
+      dist: xenial
+      compiler: clang
+      addons:
+          apt:
+              sources: *all_sources
+              packages: ['clang-6.0', 'libstdc++-7-dev']
+      env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"
     - os: osx
       osx_image: xcode10.3
       compiler: clang
