Add external dependencies caching

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Cache external depenencies
+      uses: actions/cache@v2
+        with:
+          path: ${{ runner.workspace }}/build/external
+          key: ${{ matrix.os }}-${{ matrix.compiler }}-${{ matrix.version }}
+
     - name: Install (Linux)
       if: runner.os == 'Linux'
       shell: bash
