Increase no. threads

--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -39,4 +39,4 @@ jobs:
     - name: Build
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      run: cmake --build . --config Debug -- -j 8
+      run: cmake --build . --config Debug -- -j
