Set 4 threads for make

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Build
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      run: cmake --build . --config Debug -- -j
+      run: cmake --build . --config Debug -- -j 4
 
     - name: Test
       shell: bash
