--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -19,6 +19,7 @@ jobs:
           sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
           sudo apt-get update
           sudo apt-get install -y clang-10 clang-tidy-10
+          sudo apt-get install -y libtool m4 autoconf
           echo "::set-env name=CC::clang-10"
           echo "::set-env name=CXX::clang++-10"
 
@@ -39,4 +40,4 @@ jobs:
     - name: Build
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      run: cmake --build . --config Debug
+      run: cmake --build . --config Debug -- -j 4
