--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -17,6 +17,7 @@ jobs:
       shell: bash
       run: |
           sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main"
+          sudo wget -nv https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable/xUbuntu_18.04/Release.key -O "/etc/apt/trusted.gpg.d/devel:kubic:libcontainers:stable.asc"
           sudo apt-get update
           sudo apt-get install -y clang-format-9
           echo "::set-env name=CC::clang-9
