--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,14 @@ jobs:
             os: ubuntu-latest
             compiler: "clang"
             version: "10"
+          - name: macos-gcc-9
+            os: macos-latest
+            compiler: "gcc"
+            version: "9"
+          - name: macos-xcode-11.3
+            os: macos-latest
+            compiler: "xcode"
+            version: "11.3"
     steps:
     - uses: actions/checkout@v2
 
@@ -50,7 +58,20 @@ jobs:
           fi
           echo "::set-env name=CC::${cc}"
           echo "::set-env name=CXX::${cxx}"
-
+    - name: Install (macOS)
+      if: runner.os == 'macOS'
+      run: |
+          brew install autoconf automake libtool cmake
+          if [ "${{ matrix.compiler }}" = "gcc" ]; then
+            echo "::set-env name=CC::gcc-${{ matrix.version }}"
+            echo "::set-env name=CXX::g++-${{ matrix.version }}"
+          else
+            sudo xcode-select -switch /Applications/Xcode_${{ matrix.version }}.app
+            echo "::set-env name=CC::$(xcrun -f clang)"
+            echo "::set-env name=CXX::$(xcrun -f clang++)"
+            echo "::set-env name=SDKROOT::$(xcodebuild -version -sdk macosx Path)"
+            echo "::set-env name=PATH::$(dirname $(xcrun -f clang)):$PATH"
+          fi
     - name: Create Build Environment
       shell: bash
       run: cmake -E make_directory ${{runner.workspace}}/build
