--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,30 +1,30 @@
-#add_executable(compress_inverted_index compress_inverted_index.cpp)
-#target_link_libraries(compress_inverted_index
+add_executable(compress_inverted_index compress_inverted_index.cpp)
+target_link_libraries(compress_inverted_index
+  pisa
+  CLI11
+)
+
+add_executable(build-pair-index build_binary_index.cpp)
+target_link_libraries(build-pair-index
+  pisa
+  CLI11
+)
+
+#add_executable(optimal_hybrid_index optimal_hybrid_index.cpp)
+#target_include_directories(optimal_hybrid_index PRIVATE ${STXXL_INCLUDE_DIRS})
+#target_link_libraries(optimal_hybrid_index
+#  ${STXXL_LIBRARIES}
 #  pisa
-#  CLI11
 #)
-#
-#add_executable(build-pair-index build_binary_index.cpp)
-#target_link_libraries(build-pair-index
-#  pisa
-#  CLI11
+#set_target_properties(optimal_hybrid_index PROPERTIES
+#            CXX_STANDARD 14
 #)
-#
-##add_executable(optimal_hybrid_index optimal_hybrid_index.cpp)
-##target_include_directories(optimal_hybrid_index PRIVATE ${STXXL_INCLUDE_DIRS})
-##target_link_libraries(optimal_hybrid_index
-##  ${STXXL_LIBRARIES}
-##  pisa
-##)
-##set_target_properties(optimal_hybrid_index PROPERTIES
-##            CXX_STANDARD 14
-##)
-#
-#add_executable(create_wand_data create_wand_data.cpp)
-#target_link_libraries(create_wand_data
-#  pisa
-#  CLI11
-#)
+
+add_executable(create_wand_data create_wand_data.cpp)
+target_link_libraries(create_wand_data
+  pisa
+  CLI11
+)
 
 add_executable(queries queries.cpp)
 target_link_libraries(queries
@@ -38,113 +38,113 @@ target_link_libraries(evaluate_queries
   CLI11
 )
 
-#add_executable(thresholds thresholds.cpp)
-#target_link_libraries(thresholds
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(profile_queries profile_queries.cpp)
-#target_link_libraries(profile_queries
-#  pisa
-#)
-#
-#add_executable(profile_decoding profile_decoding.cpp)
-#target_link_libraries(profile_decoding
-#  pisa
-#)
-#
-#add_executable(evaluate_collection_ordering evaluate_collection_ordering.cpp)
-#target_link_libraries(evaluate_collection_ordering
-#  pisa
-#  )
-#
-#add_executable(parse_collection parse_collection.cpp)
-#target_link_libraries(parse_collection
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(invert invert.cpp)
-#target_link_libraries(invert
-#  CLI11
-#  pisa
-#)
-#
-#add_executable(read_collection read_collection.cpp)
-#target_link_libraries(read_collection
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(partition_fwd_index partition_fwd_index.cpp)
-#target_link_libraries(partition_fwd_index
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(compute_intersection compute_intersection.cpp)
-#target_link_libraries(compute_intersection
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(lexicon lexicon.cpp)
-#target_link_libraries(lexicon
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(extract_topics extract_topics.cpp)
-#target_link_libraries(extract_topics
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(sample_inverted_index sample_inverted_index.cpp)
-#target_link_libraries(sample_inverted_index
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(map_queries map_queries.cpp)
-#target_link_libraries(map_queries
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(stem_queries stem_queries.cpp)
-#target_link_libraries(stem_queries
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(count_postings count_postings.cpp)
-#target_link_libraries(count_postings
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(selective_queries selective_queries.cpp)
-#target_link_libraries(selective_queries
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(shards shards.cpp)
-#target_link_libraries(shards
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(reorder-docids reorder_docids.cpp)
-#target_link_libraries(reorder-docids
-#  pisa
-#  CLI11
-#)
-#
-#add_executable(filter-queries filter_queries.cpp)
-#target_link_libraries(filter-queries
-#  pisa
-#  CLI11
-#)
+add_executable(thresholds thresholds.cpp)
+target_link_libraries(thresholds
+  pisa
+  CLI11
+)
+
+add_executable(profile_queries profile_queries.cpp)
+target_link_libraries(profile_queries
+  pisa
+)
+
+add_executable(profile_decoding profile_decoding.cpp)
+target_link_libraries(profile_decoding
+  pisa
+)
+
+add_executable(evaluate_collection_ordering evaluate_collection_ordering.cpp)
+target_link_libraries(evaluate_collection_ordering
+  pisa
+  )
+
+add_executable(parse_collection parse_collection.cpp)
+target_link_libraries(parse_collection
+  pisa
+  CLI11
+)
+
+add_executable(invert invert.cpp)
+target_link_libraries(invert
+  CLI11
+  pisa
+)
+
+add_executable(read_collection read_collection.cpp)
+target_link_libraries(read_collection
+  pisa
+  CLI11
+)
+
+add_executable(partition_fwd_index partition_fwd_index.cpp)
+target_link_libraries(partition_fwd_index
+  pisa
+  CLI11
+)
+
+add_executable(compute_intersection compute_intersection.cpp)
+target_link_libraries(compute_intersection
+  pisa
+  CLI11
+)
+
+add_executable(lexicon lexicon.cpp)
+target_link_libraries(lexicon
+  pisa
+  CLI11
+)
+
+add_executable(extract_topics extract_topics.cpp)
+target_link_libraries(extract_topics
+  pisa
+  CLI11
+)
+
+add_executable(sample_inverted_index sample_inverted_index.cpp)
+target_link_libraries(sample_inverted_index
+  pisa
+  CLI11
+)
+
+add_executable(map_queries map_queries.cpp)
+target_link_libraries(map_queries
+  pisa
+  CLI11
+)
+
+add_executable(stem_queries stem_queries.cpp)
+target_link_libraries(stem_queries
+  pisa
+  CLI11
+)
+
+add_executable(count_postings count_postings.cpp)
+target_link_libraries(count_postings
+  pisa
+  CLI11
+)
+
+add_executable(selective_queries selective_queries.cpp)
+target_link_libraries(selective_queries
+  pisa
+  CLI11
+)
+
+add_executable(shards shards.cpp)
+target_link_libraries(shards
+  pisa
+  CLI11
+)
+
+add_executable(reorder-docids reorder_docids.cpp)
+target_link_libraries(reorder-docids
+  pisa
+  CLI11
+)
+
+add_executable(filter-queries filter_queries.cpp)
+target_link_libraries(filter-queries
+  pisa
+  CLI11
+)
