--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,38 +48,36 @@ jobs:
             sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
           fi
           sudo apt-get update
-          sudo apt-get install -y libtool m4 autoconf
+          sudo apt-get install -y libtool m4 autoconf ccache
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
               sudo apt-get install -y "${cxx}"
           else
               sudo apt-get install -y "${cc}"
           fi
-          echo "::set-env name=CC::${cc}"
-          echo "::set-env name=CXX::${cxx}"
+          echo "::set-env name=CC::ccache ${cc}"
+          echo "::set-env name=CXX::ccache ${cxx}"
     - name: Install (macOS)
       if: runner.os == 'macOS'
       run: |
-          brew install autoconf automake libtool cmake
+          brew install autoconf automake libtool cmake ccache
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
-            echo "::set-env name=CC::gcc-${{ matrix.version }}"
-            echo "::set-env name=CXX::g++-${{ matrix.version }}"
+            echo "::set-env name=CC::ccache gcc-${{ matrix.version }}"
+            echo "::set-env name=CXX::ccache g++-${{ matrix.version }}"
           else
             sudo xcode-select -switch /Applications/Xcode_${{ matrix.version }}.app
-            echo "::set-env name=CC::$(xcrun -f clang)"
-            echo "::set-env name=CXX::$(xcrun -f clang++)"
+            echo "::set-env name=CC::ccache $(xcrun -f clang)"
+            echo "::set-env name=CXX::ccache $(xcrun -f clang++)"
             echo "::set-env name=SDKROOT::$(xcodebuild -version -sdk macosx Path)"
             echo "::set-env name=PATH::$(dirname $(xcrun -f clang)):$PATH"
           fi
     - name: Create Build Environment
       shell: bash
       run: cmake -E make_directory ${{runner.workspace}}/build
-
-    - name: Cache external depenencies
-      uses: actions/cache@v2
+    - name: Cache ccache files
+      uses: actions/cache@v1.1.2
       with:
-        path: ${{ runner.workspace }}/build/external
-        key: ${{ matrix.os }}-${{ matrix.compiler }}-${{ matrix.version }}
-
+        path: ~/.ccache
+        key: ${{ runner.os }}-${{ matrix.CC }}-${{ hashFiles('**/*.c') }}-${{ hashFiles('**/*.cpp') }}
     - name: Configure
       shell: bash
       working-directory: ${{runner.workspace}}/build
