--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install lcov
       shell: bash
       run: |
-          sudo apt-get install lcov
+          sudo apt-get install lcov g++-8
           echo "::set-env name=CC::gcc-8"
           echo "::set-env name=CXX::gcc++-8"
 
