--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -44,4 +44,9 @@ jobs:
       shell: bash
       working-directory: ${{runner.workspace}}/build
       run: |
-        python -m codecov --required --gcov-exec="gcov-9" -t ${{ secrets.CODECOV_TOKEN }}
+          lcov --capture --directory . --output-file coverage.info
+          lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter system-files
+          lcov --remove coverage.info '**/external/*' --output-file coverage.info # filter external folder
+          lcov --remove coverage.info '**/test/*' --output-file coverage.info # filter tests
+          lcov --list coverage.info # debug info
+          python -m codecov --required --gcov-exec="gcov-9" -t ${{ secrets.CODECOV_TOKEN }} -f coverage.info
