--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,10 +12,4 @@ jobs:
       shell: bash	
       working-directory: ${{runner.workspace}}/build	
       run: |
-            curl -s -X POST \
-            -H "Content-Type:application/json" \
-            -H "Travis-API-Version:3" \
-            -H "Accept:application/json" \
-            -H "Authorization:token ${{secrets.TRAVIS_API_TOKEN}}" \
-            -d '{"request":{"branch":"master"}}' \
-            'https://api.travis-ci.com/repo/pisa-engine%2Fdocker/requests'
+            curl -s -X POST -H "Content-Type:application/json" -H "Travis-API-Version:3" -H "Accept:application/json" -H "Authorization:token ${{secrets.TRAVIS_API_TOKEN}}" -d '{"request":{"branch":"master"}}' 'https://api.travis-ci.com/repo/pisa-engine%2Fdocker/requests'
